src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__diff_vulnerabilities_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  DIFF  │ acme-webapp@1.0.0 ⟷ acme-webapp@2.0.0

« [5] Vulnerabilities  │ [6] Quality  │ [7] Compliance  │ [8] Diff  »

────────────────────────────────────────────────────────────────────────────────
Filter:  All   [s] Sort: Severity  │  C  0  H  0  M  0  L  0 │ + 0  - 0  = 0
View:  List   │  [f] filter  [s] sort  [g] group
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────┐┌ Vulnerability Details ───────────┐
│                                          ││                                  │
│                     ✓                    ││                 ⚠                │
│                                          ││                                  │
│        No vulnerabilities detected       ││Select a vulnerability to view det│
│                                          ││                                  │
│Great news! No known vulnerabilities were ││   [↑↓] navigate  [Enter] expand  │
│                                          ││                                  │
│                                          ││                                  │
│                                          ││                                  │
│                                          ││                                  │
│                                          ││                                  │
│                                          ││                                  │
└──────────────────────────────────────────┘└──────────────────────────────────┘
 Components: 15 │ Vulns: 0 │ Score: 53.5
   f filter  s sort  g group │  Tab switch  / search  e export  ? help  q quit
