src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__matrix_120x40.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Matrix: 3×3 SBOMs (3 pairs)  │ Sort: Name ↑ │ Threshold: All │ Highlight                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Similarity Matrix [z: focus, r: row, c: col, Enter: diff] ───────────┐┌ Pair Details ────────────────────────────────┐
│          alpha  beta   gamma                                         ││Comparing:                                    │
│                                                                      ││alpha ↔ beta                                  │
│alpha      -     53%    0%                                            ││                                              │
│beta      53%     -     0%                                            ││Similarity: 53.5%                             │
│gamma     0%     0%      -                                            ││                                              │
│                                                                      ││alpha: 9 components                           │
│                                                                      ││beta: 9 components                            │
│                                                                      ││                                              │
│                                                                      ││Changes:                                      │
│                                                                      ││+ Added: 4                                    │
│                                                                      ││- Removed: 4                                  │
│                                                                      ││~ Modified: 5                                 │
│                                                                      ││                                              │
│                                                                      ││Press Enter for detailed diff                 │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌ Clustering (1 clusters) [C: details] ────────────────────────────────────────────────────────────────────────────────┐
│Algorithm: greedy  Threshold: 50%                                                                                     │
│                                                                                                                      │
│Cluster 1: alpha, beta (53% similarity)                                                                               │
│Outliers: gamma                                                                                                       │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Pairs: 3  Avg: 18%  │  …  t threshold  z focus  H highlight │  Tab panel  / search  V views  K keys  q quit           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
