src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__matrix_col_focus_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Matrix: 3×3 SBOMs (3 pairs)  │ Sort: Name ↑ │ Threshold: All │ Focus Mode │ H│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Similarity Matrix [z: focus, r: row, c: col, ┐┌ Pair Details ────────────────┐
│          alpha  beta   gamma                 ││Comparing:                    │
│                                              ││alpha ↔ beta                  │
│alpha      -     53%      ·                   ││                              │
│beta        ·     -       ·                   ││Similarity: 53.5%             │
│gamma       ·    0%      -                    ││                              │
│                                              ││alpha: 9 components           │
│                                              ││beta: 9 components            │
│                                              ││                              │
│                                              ││Changes:                      │
│                                              ││+ Added: 4                    │
│                                              ││- Removed: 4                  │
│                                              ││~ Modified: 5                 │
│                                              ││                              │
└──────────────────────────────────────────────┘└──────────────────────────────┘
┌ Clustering (1 clusters) [C: details] ────────────────────────────────────────┐
│Algorithm: greedy  Threshold: 50%                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Pairs: 3  Avg: 18%  │  ℹ Focused on column 2                                  │
└──────────────────────────────────────────────────────────────────────────────┘
