src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__matrix_single_sbom_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Matrix: 1×1 SBOMs (0 pairs)  │ Sort: Name ↑ │ Threshold: All │ Highlight     │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────┐┌ Pair Details ────────────────┐
│                                              ││Comparing:                    │
│                       ∅                      ││alpha ↔ alpha                 │
│                                              ││                              │
│ Need at least 2 SBOMs for a matrix comparison││(Same SBOM)                   │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
└──────────────────────────────────────────────┘└──────────────────────────────┘
┌ Clustering (0 clusters) [C: details] ────────────────────────────────────────┐
│No clustering computed                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Pairs: 0  Avg: 0%  │  …  Tab panel  / search  V views  K keys  q quit         │
└──────────────────────────────────────────────────────────────────────────────┘
