src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__matrix_sort_avg_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Matrix: 3×3 SBOMs (3 pairs)  │ Sort: Avg Similarity ↑ │ Threshold: All │ High│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Similarity Matrix [z: focus, r: row, c: col, ┐┌ Pair Details ────────────────┐
│          gamma  beta   alpha                 ││Comparing:                    │
│                                              ││gamma ↔ beta                  │
│gamma      -     0%     0%                    ││                              │
│beta      0%      -     53%                   ││Similarity: 0.0%              │
│alpha     0%     53%     -                    ││                              │
│                                              ││gamma: 3 components           │
│                                              ││beta: 9 components            │
│                                              ││                              │
│                                              ││Changes:                      │
│                                              ││+ Added: 3                    │
│                                              ││- Removed: 9                  │
│                                              ││~ Modified: 0                 │
│                                              ││                              │
└──────────────────────────────────────────────┘└──────────────────────────────┘
┌ Clustering (1 clusters) [C: details] ────────────────────────────────────────┐
│Algorithm: greedy  Threshold: 50%                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Pairs: 3  Avg: 18%  │  ℹ Sort: Avg Similarity ↑                               │
└──────────────────────────────────────────────────────────────────────────────┘
