src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__matrix_status_message_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Matrix: 3×3 SBOMs (3 pairs)  │ Sort: Name ↑ │ Threshold: All │ Highlight: on │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Similarity Matrix [z: focus, r: row, c: col, ┐┌ Pair Details ────────────────┐
│          alpha  beta   gamma                 ││Comparing:                    │
│                                              ││alpha ↔ beta                  │
│alpha      -     58%    30%                   ││                              │
│beta      58%     -     22%                   ││Similarity: 57.7%             │
│gamma     30%    22%     -                    ││                              │
│                                              ││alpha: 9 components           │
│                                              ││beta: 9 components            │
│                                              ││                              │
│                                              ││Changes:                      │
│                                              ││+ Added: 4                    │
│                                              ││- Removed: 4                  │
│                                              ││~ Modified: 5                 │
│                                              ││                              │
└──────────────────────────────────────────────┘└──────────────────────────────┘
┌ Clustering (1 cluster) [C: details] ─────────────────────────────────────────┐
│… and 2 more — C: details                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Pairs: 3  Avg: 37%  │  ℹ Threshold: >= 90%                                    │
└──────────────────────────────────────────────────────────────────────────────┘
