src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__matrix_viewport_8sboms_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Matrix: 8×8 SBOMs (28 pairs)  │ Sort: Name ↑ │ Threshold: All │ Highlight    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Similarity Matrix (4-8/8) [z: focus, r: row, ┐┌ Pair Details ────────────────┐
│          v4     v5     v6     v7     v8      ││Comparing:                    │
│                                              ││v1 ↔ v8                       │
│v1        53%    100%   53%    100%   53%     ││                              │
│v2        100%   53%    100%   53%    100%    ││Similarity: 53.5%             │
│v3        53%    100%   53%    100%   53%     ││                              │
│v4         -     53%    100%   53%    100%    ││v1: 9 components              │
│v5        53%     -     53%    100%   53%     ││v8: 9 components              │
│v6        100%   53%     -     53%    100%    ││                              │
│v7        53%    100%   53%     -     53%     ││Changes:                      │
│v8        100%   53%    100%   53%     -      ││+ Added: 4                    │
│                                              ││- Removed: 4                  │
│                                              ││~ Modified: 5                 │
│                                              ││                              │
└──────────────────────────────────────────────┘└──────────────────────────────┘
┌ Clustering (2 clusters) [C: details] ────────────────────────────────────────┐
│Algorithm: greedy  Threshold: 80%                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Pairs: 28  Avg: 73%  │  …  Tab panel  / search  V views  K keys  q quit       │
└──────────────────────────────────────────────────────────────────────────────┘
