src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__multidiff_120x40.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Multi-SBOM Comparison: baseline vs 2 targets  │ Filter: All │ Sort: Name ↑                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Baseline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Baseline: baseline  Format: CycloneDX                                                                                 │
│Components: 9  Dependencies: 0  Max Deviation: 10000.0%                                                               │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Targets (2/2) ─────────────────────────┐┌ ai-service Details ────────────────────────────────────────────────────────┐
│Target        Componen Deviatio Changes ││Target: ai-service                                                          │
│                                        ││                                                                            │
│ai-service    3        10000.0% 17      ││+ Added: 3  - Removed: 9  ~ Modified: 0                                     │
│webapp        9        4651.2%  15      ││                                                                            │
│                                        ││Vulnerabilities: +0 / -0                                                    │
│                                        ││                                                                            │
│                                        ││Semantic Score: 0.0                                                         │
│                                        │└────────────────────────────────────────────────────────────────────────────┘
│                                        │┌ Deviation ─────────────────────────────────────────────────────────────────┐
│                                        ││██████████████████████████████████10000.0% █████████████████████████████████│
│                                        │└────────────────────────────────────────────────────────────────────────────┘
│                                        │┌ Variable Components (1 total) [v: drill-down] ─────────────────────────────┐
│                                        ││Component                   Baseline         Spread          Impact         │
│                                        ││                                                                            │
│                                        ││ L  acme-webapp             1.0.0            2 versions      low            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Universal: 0  Variable: 1  Inconsistent: 20  │  …  f filter  s sort │  Tab panel  / search  V views  K keys  q quit   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
