src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__multidiff_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Multi-SBOM Comparison: baseline vs 2 targets  │ Filter: All │ Sort: Name ↑   │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Baseline ────────────────────────────────────────────────────────────────────┐
│Baseline: baseline  Format: CycloneDX                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Targets (2/2) ───────────┐┌ ai-service Details ──────────────────────────────┐
│Target  Compon Devia Chang││Target: ai-service                                │
│                          ││                                                  │
│ai-serv 3      10000 17   ││+ Added: 3  - Removed: 9  ~ Modified: 0           │
│webapp  9      4651. 15   ││                                                  │
│                          │└──────────────────────────────────────────────────┘
│                          │┌ Variable Components (1 total) [v: drill-down] ───┐
│                          ││Component         Baseline   Spread     Impact    │
│                          ││                                                  │
│                          ││[L] acme-webapp   1.0.0      2 versions low       │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Universal: 0  Variable: 1  Inconsistent: 20  │  /: search  f: filter  s: sort │
└──────────────────────────────────────────────────────────────────────────────┘
