src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__timeline_120x40.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Timeline: v1 → v3 (3 versions)  │ Sort: Chronological ↑ │ Filter: All                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Components Evolution (1-3/3) [m: metric, +/-: zoom, h/l: scroll] ────────────────────────────────────────────────────┐
│                                                                                                                      │
│                                                                                                                      │
│▂▂▂▂▂▂▂ ▂▂▂▂▂▂▂                                                                                                       │
│███████ ███████                                                                                                       │
│███9███ ███9███ ▆▆▆3▆▆▆                                                                                               │
│ 01-15   06-15   06-14                                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Versions [g: jump, d: diff] ─────────────────┐┌ Component Evolution (28/28) [f: filter, Enter: detail] ──────────────┐
│#    Version    Date       Comps  Changes CRA ││Component                 Version            Since      Status        │
│                                              ││                                                                      │
│1.   v1         2024-01-15 9      initial ✗   ││product-reviews-1M                           v3         Added         │
│2.   v2         2024-06-15 9      +4 -4   ✗   ││sentiment-classifier      1.0.0              v3         Added         │
│3.   v3         2026-06-14 3      +3 -9   ✗   ││axios                     1.4.0              v2         Added         │
│                                              ││dayjs                     1.11.7             v2         Added         │
│                                              ││express                   4.18.2             v2         Added         │
│                                              ││lodash                    4.17.21            v2         Added         │
│                                              ││prisma                    4.15.0             v2         Added         │
│                                              ││react                     18.2.0             v2         Added         │
│                                              ││typescript                5.0.4              v2         Added         │
│                                              ││zod                       3.21.4             v2         Added         │
│                                              ││bsi-aibom-complete-app    1.0.0              v3         Added         │
│                                              ││acme-webapp               1.0.0 @ v1         v1         Removed       │
│                                              ││axios                     0.21.1 @ v1        v1         Removed       │
│                                              ││axios                     1.4.0 @ v2         v2         Removed       │
│                                              ││dayjs                     1.11.7 @ v2        v2         Removed       │
│                                              ││express                   4.17.1 @ v1        v1         Removed       │
│                                              ││express                   4.18.2 @ v2        v2         Removed       │
│                                              ││jquery                    3.5.1 @ v1         v1         Removed       │
│                                              ││lodash                    4.17.20 @ v1       v1         Removed       │
│                                              ││lodash                    4.17.21 @ v2       v2         Removed       │
│                                              ││moment                    2.29.1 @ v1        v1         Removed       │
│                                              ││prisma                    4.15.0 @ v2        v2         Removed       │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Added: 7  Removed: 13  │   g jump  d diff  t stats  f filter  m metric │  Tab panel  / search  V views  K keys  q quit│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
